# webhook_to_sms

./: Cargo.toml  README.md
android/res/layout/: activity_main.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/smsgateway/: MainActivity.java  NativeBridge.java  SmsHelper.java  SmsReceiver.java
backend_for_your_application (reference))/: backend_sms_sender.rs
src/: android.rs  main.rs  server.rs
