[package]
name = "smsgateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "smsgateway"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
once_cell = "1.18"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
